<resources>
    <string name="game_intro">Hurry, defeat the martians before they take over the world! \n Tap the martians to defeat them \n HINT: Find clocks to increase your time</string>
    <string name="timer_warning">HURRY! Only 10 seconds left before they overtake you</string>
    <string name="app_name">AR-WRLD</string>
    <string name="msg_for_user">Tap to destroy martians</string>
    <string name="countdown_timer">00:00</string>
    <string name="time_up_msg">Time\'s Up!</string>
    <string name="score_text">Score: %d</string>
    <string name="default_score_text">Score :</string>
    <string name="aliens_remaining_string">X %1$d / %2$d</string>
    <string name="user_image">User Image</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="failed">Attempt Unsuccessful!</string>
    <string name="med_weapon_info">Damage: %1$d \n Ammo: %2$d</string>
    <string name="damage_weak_weapon">Damage: 1 \n Ammo: ∞</string>
    <string name="how_to_play">How to play</string>
    <string name="play">Play</string>
    <string name="top_players">Top Players</string>
    <string name="choose_a_level">CHOOSE DIFFICULTY</string>
    <string name="boss_level">This enemy looks strong, destroy it before it has a chance to take over the world! \n HINT: Switch weapons below to defeat it quicker</string>
    <string-array name="level_array">
        <item>EASY</item>
        <item>MEDIUM</item>
        <item>HARD</item>
    </string-array>
    <string name="forgot_password">Forgot Password?</string>
    <string name="note_passwrod_requirement">Note: Password must have 6 characters or more!</string>
    <string name="logout">LogOut</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_string">Error! </string>
    <string name="msg_for_resetting_password">You told us you forgot your password.
        \nIf you really did, please insert your email below, click the Reset Password button and an email will be sent to you.
        \nIf you didn\'t mean to reset your password, you can just ignore this email and your password will not change.</string>
    <string name="insert_email_message">Please insert an email!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="play_again">Back To Home Page</string>
    <string name="choose_hero_text">Choose your perk for an advantage against the invasion</string>
    <string name="confirmation">Choose this class</string>

    <string name="more_ammo_perk">Not enough ammo? Receive an additional 50% ammo for your special weapons to make your life easier</string>
    <string name="more_time_perk">Not enough time to destroy the aliens? Your time starts with +20 seconds at the start of every game.</string>
    <string name="more_clocks_perk">Feeling confident with your shooting? Clocks that appear on screen become more frequent.</string>
    <string name="more_damage_park">Need some juice to destroy martians? Your special weapons do 1 more damage.</string>
    <string name="your_score_is">Your score is</string>
    <string name="pick_a_perk">Pick a perk</string>

    <string name="more_ammo_level_1">+10% damage to enemies</string>
    <string name="more_ammo_level_2">+15% damage to enemies</string>
    <string name="more_ammo_level_3">+25% damage to enemies</string>
    <string name="more_ammo_level_4">+50% damage to enemies</string>

    <string name="more_time_level_1">+2 seconds to timer</string>
    <string name="more_time_level_2">+4 seconds to timer</string>
    <string name="more_time_level_3">+6 seconds to timer</string>
    <string name="more_time_level_4">+10 seconds to timer</string>

    <string name="more_clocks_level_1">Points required for clock to appear is reduced</string>
    <string name="more_clocks_level_2">Points required for clock to appear is greatly reduced</string>
    <string name="more_clocks_level_3">Points required for clock to appear is dramatically reduced</string>
    <string name="more_clocks_level_4">Destroying martians increase your score by an additional 1000 points</string>

    <string name="more_damage_level_1">Special weapons do +1 damage</string>
    <string name="more_damage_level_2">Special weapons do +2 damage</string>
    <string name="more_damage_level_3">Special weapons do +3 damage</string>
    <string name="more_damage_level_4">Starting weapon does +1 damage</string>

    <string name="level_exp">%1$d xp / %2$d xp to unlock</string>


    <string name="game_over_if_models_exceed_amount">Oh no! Seems like the models have overtaken you, going to the results page now…</string>
    <string name="game_over_if_timer_runs_out">You protected the Earth… for now. Keep on playing to collect more weapons</string>
    <string name="save_score">Save Score</string>
    <string name="perk_selected_text">Perk Selected:\n %s</string>
    <string name="perk_chosen_string">Perk:</string>

    <string name="more_ammo_perk_name">More Ammo</string>
    <string name="more_time_perk_name">More Time</string>
    <string name="more_clocks_perk_name">More Clocks</string>
    <string name="more_damage_perk_name">More Damage</string>
    <string name="no_perk_text">No Perk Chosen</string>

    <string name="user_score">TOP SCORE:\n %d</string>
    <string name="tap_to_shoot_string">TAP TO SHOOT</string>
    <string name="default_username">GUEST</string>
    <string name="total_score_default">Total Score:\n 0</string>
    <string name="app_title_login">Welcome to AR-WRLD</string>
    <string name="already_a_member_log_in">Already a Member? Log In!</string>
    <string name="congrats_msg">Congratulations! \n You\'ve defended the Earth!</string>
    <string name="score_is_here">Score Is here</string>
    <string name="play_again_result">Play Again?</string>
    <string name="test_string">These are just a few words to test out if this is working</string>
    <string name="total_score">Total Score</string>
    <string name="timer">Timer</string>
    <string name="current_enemy_count">Current Enemy Count</string>
    <string name="total_enemy_count">Total Enemy Count</string>
    <string name="enemy">Enemy</string>
    <string name="enemy_location">Enemy Location</string>
    <string name="weapon_info">Weapon Info</string>
    <string name="current_perk">Current Perk</string>
    <string name="reset_password_text">Please check your email if you want to reset your password!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="auth_fail_msg">Authentication failed.</string>
    <string name="hello">Hello</string>
    <string name="failure_msg">Not Successful</string>
    <string name="try_msg">Try again</string>
    <string name="permission_grant_msg">Permission Granted</string>
    <string name="permission_denied_msg">Permission Denied</string>
    <string name="msg_ok_cancel">You need to allow access permissions</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="time_up">Time\'s Up</string>


</resources>
