<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="56dp"
    android:paddingRight="24dp"
    android:background="@drawable/space_home_bg"
    tools:context=".login.SignUpActivity">

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title_login"
        android:textAlignment="center"
        android:textColor="@color/silver_app_color"
        android:fontFamily="@font/pixel_operator"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/silver_app_color"
        android:hint="@string/pick_a_username"
        android:textSize="25sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:textSize="25sp"
        android:fontFamily="@font/pixel_operator"
        android:textColor="@color/silver_app_color"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:textSize="25sp"
        android:fontFamily="@font/pixel_operator"
        android:textColor="@color/silver_app_color"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/silver_app_color"
        android:fontFamily="@font/pixel_operator"
        android:textSize="18sp"
        android:text="@string/note_passwrod_requirement" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:textSize="25sp"
        android:fontFamily="@font/pixel_operator"
        android:background="@drawable/button_bg"
        android:text="@string/create_a_new_account" />

    <TextView
        android:id="@+id/login_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/already_a_member_log_in"
        android:textSize="16sp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>