<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/space_home_bg"
    tools:context=".login.SignInActivity">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel_operator"
        android:textSize="40sp"
        android:textColor="@color/silver_app_color"
        android:textAlignment="center"
        android:text="@string/app_title_login"
        />


    <ImageView
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/user_image"
        android:scaleType="fitCenter"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_splash_transparent" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Email"
        android:textColorHighlight="@color/silver_app_color"
        android:hint="@string/user_email"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:fontFamily="@font/pixel_operator"
        android:textColor="@color/silver_app_color"
        android:textColorHint="@android:color/darker_gray" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/user_password"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:textColor="@color/silver_app_color"
        android:fontFamily="@font/pixel_operator"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/forgot_password"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:background="@drawable/button_bg"
        android:text="@string/log_in"
        android:fontFamily="@font/pixel_operator"
        android:textColor="@color/silver_app_color" />

    <Button
        android:id="@+id/sign_in_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/create_a_new_account"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/sign_in_google"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="110dp"-->
        <!--android:paddingTop="16dp" />-->

    <ProgressBar
        android:id="@+id/sign_in_progressbar"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="24dp" />


</LinearLayout>