<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_gradient"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".login.ResetPasswordActivity">

    <TextView
        android:id="@+id/text_for_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/msg_for_resetting_password"
        android:textColor="@color/silver_app_color"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insert_email_to_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel_operator"
        android:hint="@string/user_email"
        android:textColor="@color/silver_app_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/reset_password"
        android:textColor="@color/silver_app_color"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/log_in"
        android:textColor="@color/silver_app_color"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/reset_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:src="@drawable/logo_splash_transparent" />

</android.support.v7.widget.LinearLayoutCompat>