<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/sceneform_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/number_of_aliens_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:text="@string/aliens_remaining_string"
        android:textColor="#fff"
        android:background="#F51720"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/scorekeeping_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/score_text"
        android:background="#F51720"
        android:textColor="#fff"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/timer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F51720"
        android:textColor="#fff"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/countdown_timer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg_for_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_for_user"
        android:background="#F51720"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--<LinearLayout-->
        <!--android:id="@+id/gallery_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/sceneform_fragment"-->
        <!--app:layout_constraintVertical_chainStyle="spread"-->
        <!--app:layout_constraintVertical_weight="1" />-->

</android.support.constraint.ConstraintLayout>