<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_for_ar_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:padding="2dp"
    tools:context=".SpaceARFragment">

    <fragment
        android:id="@+id/sceneform_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--Weapon layout begins here-->

    <TextView
        android:id="@+id/damage_for_med_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#70000000"
        android:text="@string/med_weapon_info"
        android:textColor="#ffff"
        android:fontFamily="@font/pixel_operator"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/med_weapon"
        app:layout_constraintEnd_toEndOf="@id/med_weapon"
        app:layout_constraintStart_toStartOf="@id/med_weapon" />

    <ImageView
        android:id="@+id/med_weapon"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/space_gun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/damage_for_weak_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#70000000"
        android:text="@string/damage_weak_weapon"
        android:textColor="#ffff"
        android:fontFamily="@font/pixel_operator"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/weak_weapon"
        app:layout_constraintEnd_toEndOf="@id/weak_weapon"
        app:layout_constraintStart_toStartOf="@id/weak_weapon" />

    <ImageView
        android:id="@+id/weak_weapon"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/gun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/med_weapon" />

    <!--Weapon layout ends here-->

    <!--This is where the HUD views start-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/hud_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#70000000"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/scorekeeping_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/pixel_operator"
            android:padding="8dp"
            android:text="@string/score_text"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/saucer_icon"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/saucer_icon"
            app:layout_constraintBottom_toBottomOf="@id/number_of_aliens_textview"
            app:layout_constraintEnd_toStartOf="@id/number_of_aliens_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_of_aliens_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/pixel_operator"
            android:padding="8dp"
            android:text="@string/aliens_remaining_string"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/timer_image"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toEndOf="@+id/scorekeeping_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/timer_image"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/timer_black_white"
            app:layout_constraintBottom_toBottomOf="@id/timer_textview"
            app:layout_constraintEnd_toStartOf="@id/timer_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/pixel_operator"
            android:text="@string/countdown_timer"
            android:textAlignment="gravity"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <!--This is where the HUD views end-->

    <TextView
        android:id="@+id/msg_for_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F51720"
        android:fontFamily="@font/aansa"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/left_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/right_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/perk_chosen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/pixel_operator"
        android:text="@string/perk_chosen_string"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/perk_chosen_image_ar"
        app:layout_constraintEnd_toEndOf="@+id/perk_chosen_image_ar"
        app:layout_constraintStart_toStartOf="@+id/perk_chosen_image_ar" />

    <ImageView
        android:id="@+id/perk_chosen_image_ar"
        android:layout_width="75dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>